<resources>
    <string name="app_name">Recom</string>
    <string name="app_name2">app</string>
    <string name="login">Login</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar Contraseña</string>
    <string name="registrate_text">Contraseña | Registrar</string>
    <string name="email">Correo</string>
    <string name="Confirmar_email">Confirmar Correo</string>
    <string name="registrar">Registrar</string>
    <string name="title_activity_menu__principal">Menu_Principal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
