<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:id="@+id/LL1"
        >

        <TextView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/user"
            android:gravity="center"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:ems="10"
            android:id="@+id/userEditText"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        >

        <TextView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/password"
            android:gravity="center"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordEditText"
            android:layout_weight="1" />
    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">
            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/email"
                android:gravity="center"
                />
            <EditText
                android:layout_width="235dp"
                android:layout_height="50dp"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/emailAddressEditText" />



        </LinearLayout>

        <Button
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="50dp"
            android:text="@string/registrar"
            android:onClick="onRegistrar"/>



    </LinearLayout>


</RelativeLayout>
